unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/breadwinner_ns__BW_NetSuite_Object__c.object-meta.xml
<CustomObject>
    <description>This object is to store NetSuite Object information</description>
    <label>NetSuite Object</label>
    <nameField>
        <label>NetSuite Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>