unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Additional_Where_Filter__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Additional_Where_Filter__c</fullName>
    <label>Additional Where Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>