unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Category__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Category__c</fullName>
    <description>Category can be Core, Additional, and CustomObject</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>