unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Disable_Breadwinner_Sync__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Disable_Breadwinner_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field value is checked at the org level NetSuite Object record, then we skip the Regular Sync for that NetSuite Object.</description>
    <label>Disable Breadwinner Sync</label>
    <type>Checkbox</type>
</CustomField>