unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Download_PDF_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Download_PDF_Template_Id__c</fullName>
    <description>Stores the NetSuite Id of the Template stored in the File Cabinet of NetSuite, used to download the PDF with a specific Template.</description>
    <label>Download PDF Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>