unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__FieldMappings__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__FieldMappings__c</fullName>
    <description>This stores the JSON format of Field Mappings and as of now we use it for Company Configuration Mappings</description>
    <label>Field Mappings</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>