unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Hide_Download_PDF__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Hide_Download_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this field value we will hide the &quot;Download Invoice PDF&quot; button at the invoice records.</description>
    <label>Hide Download PDF</label>
    <type>Checkbox</type>
</CustomField>