unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Historical_Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Historical_Last_Sync_Time__c</fullName>
    <description>Date till which Historical data is synced</description>
    <inlineHelpText>Time till which records were synced</inlineHelpText>
    <label>Historical Last Sync Time</label>
    <type>DateTime</type>
</CustomField>