unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Hourly_Batch_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Hourly_Batch_Run_Time__c</fullName>
    <description>Hourly Sync Batch last execution/run time in Salesforce for this object.</description>
    <label>Hourly Batch Run Time</label>
    <type>DateTime</type>
</CustomField>