unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Hourly_Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Hourly_Last_Sync_Time__c</fullName>
    <description>Up to this date and time is the data synced by the Regular Sync.</description>
    <label>Hourly Last Sync Time</label>
    <type>DateTime</type>
</CustomField>