unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Hourly_Retry_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Hourly_Retry_Page_Number__c</fullName>
    <label>Hourly Retry Page Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>