unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Match_Criteria__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Match_Criteria__c</fullName>
    <description>This stores the JSON format of Match Criteria for Auto-Match</description>
    <label>Match Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>