unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__NetSuite_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Object_Id__c</fullName>
    <description>Internal Id of the NetSuite Object when Category is CustomObject</description>
    <label>NetSuite Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>