unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__NetSuite_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Object_Label__c</fullName>
    <description>Label of the NetSuite Object</description>
    <label>NetSuite Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>