unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Page_Index__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Page_Index__c</fullName>
    <description>It is to store the Historical Sync&#39;s page value during the SuiteTalk request and to store the offset value during the SuiteQL request.</description>
    <label>Page Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>