unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Salesforce_API_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Salesforce_API_Name__c</fullName>
    <description>Mapped Salesforce object API name when Category is Additional or CustomObject</description>
    <label>Salesforce API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>