unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Subsidiary</label>
    <referenceTo>breadwinner_ns__BW_Subsidiary__c</referenceTo>
    <relationshipLabel>NetSuite Objects</relationshipLabel>
    <relationshipName>NetSuiteObjects</relationshipName>
    <type>Lookup</type>
</CustomField>