unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Total_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Total_Page_Count__c</fullName>
    <description>Field is used to store number of pages sent back from NetSuite.</description>
    <label>Total Page Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>