unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Weekly_Page_Index__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Weekly_Page_Index__c</fullName>
    <label>Weekly Page Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>