unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Weekly_Retry_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Weekly_Retry_Page_Size__c</fullName>
    <label>Weekly Retry Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>