unpackaged/main/default/objects/breadwinner_ns__BW_NetSuite_Object__c/fields/breadwinner_ns__Weekly_Search_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Weekly_Search_Id__c</fullName>
    <label>Weekly Search Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>